--- a/strategy/präsens.tex
+++ b/strategy/präsens.tex
@@ -32,6 +32,7 @@
 
 \AtBeginSubsection[]
 {
+    \small
     \begin{frame}{Inhalt}
         \begin{multicols}{2}
             \small
@@ -51,6 +52,7 @@
 % https://tex.stackexchange.com/questions/24343/splitting-toc-into-two-columns-on-single-frame-in-beamer
 
 \begin{frame}{Inhalt}
+    \small
     \begin{multicols}{2}
         \small
         \tableofcontents[hidesubsections]
@@ -241,16 +243,45 @@
         \item Wir werden den Gegner vernichtend Schlagen! \pause
     \end{itemize}
 
-
     Oder auch:
     \begin{itemize}
         \item Nicht aufhören, bis man sein Ziel erreicht \pause
-        \item So weitermachen wie bisher
+        \item Ich möchte eine Gute Note schreiben. Daher esse ich Kuchen.
     \end{itemize}
 \end{frame}
 
-\subsection{Warum wird so vieles für Strategie gehalten?}
+\begin{frame}[c]{Nicht-Strategie}
+    \large
+    \begin{itemize}
+        \item Flauschige Ziele \pause
+        \item Vision \pause
+        \item Die Herausforderung verfehlen \pause
+        \item Inkonsistente Ziele / Aktionen \pause
+    \end{itemize}
+\end{frame}
 
+
+\begin{frame}{Flauschige Ziele}
+    
+\end{frame}
+
+
+\begin{frame}{Strategie Falsch interpretieren}
+    
+\end{frame}
+
+
+\begin{frame}{Die Herausforderung verfehlen}
+    Beispiel: Ich möchte eine Gute Note schreiben. Daher esse ich Kuchen.
+\end{frame}
+
+
+\begin{frame}{Inkonsistente Ziele / Aktionen}
+    
+\end{frame}
+
+
+\subsection{Warum wird so vieles für Strategie gehalten?}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SECTION%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -259,9 +290,10 @@
 \begin{frame}{Analyse I - Finden versteckter Stärken}
     % Mehrere Optionen:
     %   Wal-Mart (?)
-    %   David & Goliath (?)
+    %   David & Goliath (?) (Melly fragen!)
     %   Dosen-Abfüll-Dings (?)
 \end{frame}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SECTION%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -288,18 +320,68 @@
     \end{itemize}
 \end{frame}
 
-\subsection{Intel}
-
 \begin{frame}[c]{Gute Strategie: Beispiel Intel}
     Intel hat einiges Richtig gemacht:
+    \begin{itemize}
+        \item War ursprünglich Arbeitsspeicher-Hersteller \pause
+        \item Radikaler Umschwung z
+    \end{itemize}
 \end{frame}
 
-\subsection{SpaceX}
+
 
 \begin{frame}[c]{Gute Strategie: Beispiel SpaceX}
-    Wie sah die Raumfahrt-Industrie vor SpaceX aus?
+    Wie sah die Raumfahrt-Industrie vor SpaceX aus? \pause
+    
+
+    Es gab:
+    \begin{itemize}
+        \item die ULA (United Launch Alliance)
+        \item Arianespace (ESA-basiert)
+        \item Das Russische Kommerzielle Programm
+        \item (Das Chinesische und Japanische Raumfahrt-Programm)
+    \end{itemize}
+
 \end{frame}
 
+
+
+\begin{frame}[c]{Raketen}
+
+    \begin{tabular}{l|l|l|l|l}
+        Wer &   Rakete         &   zum LEO &  zum GTO  &  Kosten         \\ \hline
+        ULA & Delta IV (Heavy) & 22'560 Kg & 13'400 Kg & 400 Mio \$      \\ \hline
+        ULA & Atlas V          & 18'510 Kg &  8'900 Kg & 150 Mio \$      \\ \hline
+        ESA & Ariane 5         & 20'000 Kg & 10'500 Kg & 220 Mio \$      \\ \hline
+        ESA & Soyuz II         &  8'200 Kg &  3'250 Kg & 60 Mio  \$      \\ \hline
+        ILS & Proton-M         & 23'000 Kg &  6'920 Kg & 150 Mio \$      \\
+    \end{tabular}
+
+
+    \footnotesize
+    Disclaimer: es ist sehr Schwer Korrekte Preis-Angaben zu finden, da diese meist nicht Öffentlich sind.
+    Auch die Traglasten sind nicht exakt Angebbar, da ständig irgendwelche Verbesserungen (zumindest in letzter Zeit)
+    gemacht werden.
+
+\end{frame}
+
+
+\begin{frame}[c]{SpaceX}
+
+    \includegraphics[height=3cm]{strategy/comparison.jpg} \\
+
+    \begin{tabular}{l|l|l|l|l}
+        Rakete       & zum LEO   & zum GTO   & Traglast zum Mars & Kosten \\ \hline
+        Falcon 9     & 22'000 Kg &  8'300 Kg &  4'200 Kg         & 60Mio  \\ \hline
+        Falcon Heavy & 54'400 Kg & 22'200 Kg & 13'400 Kg         & 90Mio  \\
+    \end{tabular}
+
+
+    \footnotesize
+    Unter der Annahme, dass die Booster / Erste Stufe nicht wiederverwendet wird.
+    Andernfalls sind ca. 30\% der Traglast abzuziehen
+
+\end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SECTION%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -322,8 +404,24 @@
     \beamertemplatearticlebibitems
     \bibitem{Wikipedia}
         Wikipedia
-        \newblock {\em Battle of Trafalgar}
-        \newblock \url{https://en.wikipedia.org/wiki/Battle\_of\_Trafalgar}
+            \newblock {\em Battle of Trafalgar}
+            \newblock \url{https://en.wikipedia.org/wiki/Battle\_of\_Trafalgar}
+    \bibitem{Wikipedia}
+        Wikipedia
+            \newblock {\em SpaceX}
+            \newblock \url{Dunno}
+    \bibitem{Wihipedia}
+        Wikipedia
+            \newblock {\em Proton-M}
+            \newblock \url{https://en.wikipedia.org/wiki/Proton-M}
+    \bibitem{Wikipedia}
+        Wikipedia
+            \newblock {\em Ariane 5}
+            \newblock \url{https://en.wikipedia.org/wiki/Ariane\_5}
+    \bibitem{Wikipedia}
+        Wikipedia
+            \newblock {\em Delta IV Heavy}
+            \newblock \url{https://en.wikipedia.org/wiki/Delta\_IV}
     \end{thebibliography}
     % required the allowframebreaks for longer lists
 
