--- a/thinking-paradigms/präsens.tex
+++ b/thinking-paradigms/präsens.tex
@@ -51,6 +51,11 @@
         \item Religion
         \item Rationalität
         \item Stoismus
+        \item Maoismus
+        \item Taoismus
+        \item Buddhismus
+        \item 'Gentleman'
+        \item Utilitarismus
         \item Weitere ...
     \end{itemize}
 \end{frame}
@@ -63,7 +68,7 @@
 
 
 \begin{frame}[standout]
-    Ende
+    Fragen ?
 \end{frame}
 
 
