made severe progress

--- a/strategy/analysis.tex
+++ b/strategy/analysis.tex
@@ -1,12 +1,6 @@
 
-
-\begin{frame}[c]{Strategie}
-    \Large
-    Ein Ziel ist das Was. \\
-    Gründe sind das Warum. \\
-    \pause
-    Strategie ist das Wie.
-\end{frame}
+% \section{Analysis}
+% not at all what it is supposed to be
 
 
 
