--- a/strategy/begin.tex
+++ b/strategy/begin.tex
@@ -1,8 +1,7 @@
 
-
 \ifonline
 \begin{frame}[c]{Disclaimer}
-    Ein paar beispiele kommen aus der Welt der Wirtschaft. \\ \pause
+    Ein paar Beispiele kommen aus der Welt der Wirtschaft. \\ \pause
 
     \vfill
 
