--- a/strategy/cached.tex
+++ b/strategy/cached.tex
@@ -13,6 +13,7 @@
 
 \begin{frame}[standout]
     Wer hält Strategie für wichtig?
+    % punkt: strategie ist wirklich wichtig, auch für das alltägliche planungen
 \end{frame}
 
 \begin{frame}[standout]
