--- a/strategy/cites.tex
+++ b/strategy/cites.tex
@@ -16,14 +16,25 @@
         \newblock The Difference and Why It Matters \\
                   ISBN: 978-1-78125-154-6
     \beamertemplatearticlebibitems
-    \bibitem{Wikipedia}
-        Wikipedia
-            \newblock {\em Battle of Trafalgar}
-            \newblock \url{https://en.wikipedia.org/wiki/Battle\_of\_Trafalgar}
-    \bibitem{Wikipedia}
-        Wikipedia
+    \bibitem{Lesswrong}
+        Lesswrong
+            \newblock {\em Expecting short Inferential Distances}
+            \newblock \url{http://lesswrong.com/lw/kg/expecting\_short\_inferential\_distances/}
+    \bibitem{Lesswrong}
+        Lesswrong
+            \newblock {\em Cached Thoughts}
+            \newblock \url{http://lesswrong.com/lw/k5/cached\_thoughts/}
+    \bibitem{Zenhabits}
+        Zenhabits
+            \newblock {\em say No so you can say YES}
+            \newblock \url{https://zenhabits.net/say-yes/}
+
+
+    \bibitem{SpaceX}
+        SpaceX
             \newblock {\em SpaceX}
             \newblock \url{http://www.spacex.com/}
+
     \bibitem{Wihipedia}
         Wikipedia
             \newblock {\em Proton-M}
