--- a/strategy/präsens.tex
+++ b/strategy/präsens.tex
@@ -19,7 +19,7 @@
 \subject{Mathecamp}
 
 \newif\ifonline
-\onlinetrue
+\onlinefalse
 % \onlinefalse
 
 \AtBeginSection[]
@@ -46,6 +46,20 @@
 
 \begin{document}
 
+
+\begin{frame}[c]{Inferentielle Entfernungen}
+    % Gedankenschritte
+    \large
+    Was sind Inferentielle Entfernungen? \\ \pause
+    Wir erwarten dass diese kurz sind. Sind sie (meist) nicht.
+\end{frame}
+
+
+\begin{frame}[standout]
+    Ganz viele Fragen stellen!
+\end{frame}
+
+
 \maketitle
 
 % multicols from:
@@ -66,7 +80,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{begin.tex} % DONE
+% \input{begin.tex} % PROGRESS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%CACHED THOUGHTS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \input{cached.tex} % DONE
@@ -77,21 +91,25 @@
 % \input{analysis.tex} % IN PROGRESS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ECHTE STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Echte Strategie}
-\input{real_kernel.tex} % IN PROGRESS
-% \input{real_gaining_advantage.tex} % TODO
-% \input{real_focus.tex} % TODO
-% \input{real_design.tex} % TODO
-% \input{real_using_advantage.tex} % TODO
+% \input{real_kernel.tex} % DONE
+% \input{sources_of_power.tex} % IN PROGRESS
+% \input{design.tex} % TODO
+\input{focus.tex} % TODO
+% \input{using_advantage.tex} % TODO
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEISPIELE FÜR GUTE STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{examples_good.tex} % IN PROGRESS
+% \input{examples_good.tex} % IN PROGRESS - Required even ?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%CITES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{cites.tex} % IN PROGRESS
+\input{cites.tex} % IN PROGRESS
+
+% other articles to include:
+% belief chains: http://lesswrong.com/lw/l9d/belief_chains/
+% reversed stupidity? http://lesswrong.com/lw/lw/reversed_stupidity_is_not_intelligence/
+% map and territory?
 
 
 
