--- a/strategy/real_kernel.tex
+++ b/strategy/real_kernel.tex
@@ -1,10 +1,19 @@
+\section{Echte Strategie}
+
+\begin{frame}[c]{Strategie}
+    \Large
+    Ein Ziel ist das Was. \\
+    Gründe sind das Warum. \\
+    \pause
+    Strategie ist das Wie.
+\end{frame}
 
 
-\subsection{Kernelemente Echter Strategie}
+\subsection{Kernel}
 
 
 \begin{frame}[c]{Kernel - was ist das}
-    \Large
+    \large
     Jede gute Strategie hat eine gemeinsame zugrundeliegende Struktur
 \end{frame}
 
@@ -13,8 +22,10 @@
     \Large
     \begin{itemize}
         \item Diagnose
+            \pause
         \item Eine Leitende Idee
-        \item Mange Zusammenhängender Aktionen
+            \pause
+        \item Menge Zusammenhängender Aktionen
     \end{itemize}
     % Bsp:
     % - Arzt
@@ -33,7 +44,11 @@
         \item Reichweite
         \item Ideen zur Veränderung
     \end{itemize}
+    % Explizit unerwähnt, da nicht teil der Grundstruktur
 \end{frame}
+
+
+\subsection{Diagnose}
 
 
 \begin{frame}[c]{Kernel - Diagnose}
@@ -79,11 +94,14 @@
 \end{frame}
 
 
-\begin{frame}[c]{Diagnose: Beispiel}
+\begin{frame}[c]{Diagnose - Beispiel}
     IBM, 1993, es ging Bergab. \\
     Diagnose: Zu groß. \\ \pause
     Neue Diagnose: Zu wenig vernetzt.
 \end{frame}
+
+
+\subsection{Leitidee}
 
 
 \begin{frame}[c]{Leitidee - Was ist das}
@@ -92,13 +110,57 @@
 \end{frame}
 
 
-\begin{frame}
-    
+\begin{frame}[c]{Leitidee - Beispiel}
+    \Large
+    Kleiner Eckladen
 \end{frame}
 
 
+\subsection{Zusammenhängende Aktionen}
 
 
+\begin{frame}[c]{Menge Zusammenhängender Aktionen}
+    \Huge
+    Klingt einfach. Ist es nicht.
+    % eigentliche Strategie
+\end{frame}
+
+
+\begin{frame}[c]{Menge Zusammenhängender Aktionen}
+    \Huge
+    Eigentlicher Teil der Strategie
+\end{frame}
+
+
+\begin{frame}[c]{Zusammenhängende Aktionen}
+    \Huge
+    Koordinierte Aktionen
+\end{frame}
+
+
+\subsection{Fazit}
+
+
+\begin{frame}[c]{Kernel}
+    \Large
+    \begin{itemize}
+        \item Diagnose
+            \pause
+        \item Eine Leitende Idee
+            \pause
+        \item Menge Zusammenhängender Aktionen
+    \end{itemize}
+    % Bsp:
+    % - Arzt
+    % - Autofahren
+\end{frame}
+
+
+\begin{frame}{Kernel - Fazit}
+    \large
+    Sehr wichtige Grundbausteine, \\
+    Sehr vieles wird schiefgehen sollten diese nicht vorhanden sein.
+\end{frame}
 
 
 
