--- a/proseminar/aussagen.tex
+++ b/proseminar/aussagen.tex
@@ -5,9 +5,9 @@
 \begin{frame}[c]{Aussagentypen - Einführung}
     \large
     Eine $\Sigma_1$-Aussage ist eine Aussage der Form: \\
-    \[ \text{"`Es gibt $n \in \mathbb{N}$ mit $\heartsuit$."',}\]
+    \[ \text{"`Es existieren $n \in \mathbb{N}$ mit $\heartsuit$."',}\]
         \pause
-    wobei in der Teilaussage $\heartsuit$ nur noch {\em beschränkte Quantifikatoren} vorkommen dürfen, also Formeln wie:
+    wobei in der Teilaussage $\heartsuit$ nur noch {\em beschränkte Quantoren} vorkommen dürfen, also Formeln wie:
     \pause
     \[ \text{"`Für alle Zahlen m kleiner .. gilt ..."'} \]
     oder
@@ -16,7 +16,7 @@
 \end{frame}
 
 
-\begin{frame}[c]{Aussagentypen}
+\begin{frame}[c]{Aussagentypen - Beispiele}
     \Large
     $n_1, .., n_k, m_1, .., m_k \in \mathbb{N}$;
     \only<5-> {$f_1, .., f_k : \mathbb{N} \rightarrow \mathbb{N}$} \\
