--- a/proseminar/begin.tex
+++ b/proseminar/begin.tex
@@ -1,26 +1,33 @@
 
 
-\section{Übersicht}
-
-\begin{frame}[c]{Übersicht}
-    \begin{itemize}
-%        \item Berechenbarkeit
-        \item Turingmaschine
-        \item Eigenschaften
-        \item Aussagentypen
-            \pause
-%        \item Limitierungen
-        \item Unendlichkeit
-%        \item Kardinalzahlen
-        \item Ordinalzahlen
-            \pause
-        \item Superturingmaschinen
-        \item Grenzverhalten
-        \item Fähigkeiten
-            \pause
-        \item Halteverhalten
-        \item Stempelbare Zahlen
-    \end{itemize}
+\begin{frame}[c]
+    \Huge
+    Disclaimer
+    % Mengge != Klasse, kann dennoch vorkommen.
 \end{frame}
+
+
+% \section{Übersicht}
+% 
+% \begin{frame}[c]{Übersicht}
+%     \begin{itemize}
+% %        \item Berechenbarkeit
+%         \item Turingmaschine
+%         \item Eigenschaften
+%         \item Aussagentypen
+%             \pause
+% %        \item Limitierungen
+%         \item Unendlichkeit
+% %        \item Kardinalzahlen
+%         \item Ordinalzahlen
+%             \pause
+%         \item Superturingmaschinen
+%         \item Grenzverhalten
+%         \item Fähigkeiten
+%             \pause
+%         \item Halteverhalten
+%         \item Stempelbare Zahlen
+%     \end{itemize}
+% \end{frame}
 
 
