--- a/proseminar/ordinals.tex
+++ b/proseminar/ordinals.tex
@@ -14,6 +14,20 @@
 % \subsection{Ordinalzahlen}
 
 
+
+\begin{frame}[c]{Unendlichkeit allgemein}
+    \Large
+    Unterschied:
+    \pause
+    \begin{itemize}
+        \item Abzählbar Unendlich \only<4->{($\mathbb{N}, \mathbb{Z}, \mathbb{Q}$)}
+            \pause
+        \item Überabzählbar Unendlich \only<4->{($\mathbb{R}$)}
+    \end{itemize}
+\end{frame}
+
+
+
 \begin{frame}[c]{Problem des Ordinalen Zahlenstrahls}
     \large
     \only<1> {Normaler Zahlenstrahl: \\}
