--- a/proseminar/sources.tex
+++ b/proseminar/sources.tex
@@ -10,16 +10,40 @@
 
     \begin{thebibliography}{10}
     \beamertemplatebookbibitems
-    \bibitem{Infinite Time Turing Machines}
-        Infinite Time Turing Machines
-        \newblock {\em Joel David Hamkins and Andy Lewis}.
-        \newblock https://arxiv.org/pdf/math/9808093.pdf
+    \bibitem{Joel David Hamkins and Andy Lewis}
+        Joel David Hamkins and Andy Lewis
+        \newblock {\em Infinite Time Turing Machines}
+        \newblock \url{https://arxiv.org/pdf/math/9808093.pdf}
         \beamertemplatearticlebibitems
+
+    \bibitem{Bilder}
+        Bilder
+        \newblock Nach erscheinen:
+
+        \newblock 1 \url{https://github.com/iblech/mathezirkel-kurs/tree/master/superturingmaschinen/images/turing-machine.png}
+        \newblock 2 \url{https://en.wikipedia.org/wiki/File:State_diagram_3_state_busy_beaver_2B.svg}
+        \newblock 3 \url{https://en.wikipedia.org/wiki/Ordinal_number#/media/File:Omega-exp-omega-labeled.svg}
+
+
 
     \bibitem{Wikipedia}
         Wikipedia
-            \newblock {\em Arithmetical hierarchy}
-            \newblock \url{https://en.wikipedia.org/wiki/Arithmetical_hierarchy}
+        \newblock {\em Arithmetische hierarchie}
+        \newblock \url{https://en.wikipedia.org/wiki/Arithmetical_hierarchy}
+
+    \bibitem{Wikipedia}
+        Wikipedia
+        \newblock {\em Ordinalzahlen}
+        \newblock \url{https://en.wikipedia.org/wiki/Ordinal_number}
+        \newblock \url{https://de.wikipedia.org/wiki/Ordinalzahl}
+
+    \bibitem{Wikipedia}
+        Wikipedia
+        \newblock {\em Wohlordnung}
+        \newblock \url{https://en.wikipedia.org/wiki/Well-order}
+        \newblock \url{https://de.wikipedia.org/wiki/Wohlordnung}
+
+
 %     \bibitem{Lesswrong}
 %         Lesswrong
 %             \newblock {\em Expecting short Inferential Distances}
@@ -32,17 +56,17 @@
 %         Zenhabits
 %             \newblock {\em say No so you can say YES}
 %             \newblock \url{https://zenhabits.net/say-yes/}
-% 
+%
 %     \bibitem{Wikiquote}
 %         Fukuzawa Yukichi
 %             \newblock {\em Wikiquote}
 %             \newblock \url{https://en.wikiquote.org/wiki/Fukuzawa\_Yukichi}
-% 
+%
 %     \bibitem{SpaceX}
 %         SpaceX
 %             \newblock {\em SpaceX}
 %             \newblock \url{http://www.spacex.com/}
-% 
+%
 %    \bibitem{Wihipedia}
 %        Wikipedia
 %            \newblock {\em Proton-M}
@@ -58,4 +82,9 @@
     \end{thebibliography}
     % required the allowframebreaks for longer lists
 
+\end{frame}
+
+
+\begin{frame}[c]
+    (Leere Folie um exakt 42 zu haben :) )
 \end{frame}
