--- a/proseminar/turingmachine.tex
+++ b/proseminar/turingmachine.tex
@@ -20,7 +20,7 @@
     Relevant:
     \begin{itemize}
             \pause
-        \item Äquivalent zu TM mit mehreren Spuren 
+        \item Äquivalent zu TM mit mehreren Spuren
             \pause
         \item Äquivalent zu TM mit mehreren Bändern
             \pause
@@ -28,11 +28,12 @@
             \pause
         \item Andere Berechenbarkeitsmodelle gleichmächtig
             \pause
-        \item TM ist Eindeutig Definiert
+        \item Turingmaschine ist Codierbar
             \pause
         \item Kann andere Turingmaschinen Simulieren
             \pause
-        \item Halteproblem
+        \item Gibt abzählbar unendlich viele
+%         \item Halteproblem
     \end{itemize}
 \end{frame}
 
