--- a/proseminar/präsens.tex
+++ b/proseminar/präsens.tex
@@ -84,7 +84,7 @@
 \input{begin.tex}
 % % \input{computability.tex}
 \input{turingmachine.tex}
-% \input{aussagen.tex}
+\input{aussagen.tex}
 \input{ordinals.tex}
 % % \input{kardinals.tex}
 \input{supertm.tex}
